First data extraction

--- a/feature/prac_feature_extraction.ipynb
+++ b/feature/prac_feature_extraction.ipynb
@@ -211,6 +211,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(type(spec_noisy))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
