--- a/src/[prac]torch_data.ipynb
+++ b/src/[prac]torch_data.ipynb
@@ -93,7 +93,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/kbh/anaconda3/envs/dnn/lib/python3.8/site-packages/torchaudio/backend/utils.py:53: UserWarning: \"sox\" backend is being deprecated. The default backend will be changed to \"sox_io\" backend in 0.8.0 and \"sox\" backend will be removed in 0.9.0. Please migrate to \"sox_io\" backend. Please refer to https://github.com/pytorch/audio/issues/903 for the detail.\n",
+      "/home/kiosk/anaconda3/envs/dnn/lib/python3.8/site-packages/torchaudio/backend/utils.py:53: UserWarning: \"sox\" backend is being deprecated. The default backend will be changed to \"sox_io\" backend in 0.8.0 and \"sox\" backend will be removed in 0.9.0. Please migrate to \"sox_io\" backend. Please refer to https://github.com/pytorch/audio/issues/903 for the detail.\n",
       "  warnings.warn(\n"
      ]
     }
@@ -107,16 +107,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"gpu: 'cuda:0'\\n---\\nmodel :\\n  FC :\\n    len : 3\\n  DCUNET : \\n    num_frame : 80\\n---\\ntrain:\\n  epoch: 50\\n  batch_size: 12\\n  num_workers: 16\\n  optimizer: 'adam'\\n  adam: 0.0001\\n  adabound:\\n    initial: 0.001\\n    final: 0.05\\n  frame_num: 1024\\n\\n  summary_interval: 10\\n  validation_interval: 100\\n  checkpoint_interval: 1000\\n---\\nloss:\\n  type: 'wSDR'\\n---\\nscheduler: # Plateau, oneCycle, None\\n  type: 'Plateau'\\n  oneCycle:\\n    max_lr: 0.0001\\n  Plateau:\\n    mode: 'min'\\n    patience: 2\\n    factor: 0.5\\n    min_lr: 0.000005\\n---\\naudio:\\n  frame : 1024\\n  shift : 256\\n  samplerate : 16000\\n---\\ndata:\\n  root: '/home/data/kbh/3-channel-dnn/'\\n---\\n  log:\\n    root: '/home/nas/user/kbh/3-channel-dnn/'\""
+       "\"gpu: 'cuda:0'\\n---\\nmodel :\\n  FC :\\n    len : 3\\n  DCUNET : \\n    num_frame : 80\\n---\\ntrain:\\n  epoch: 50\\n  # 12\\n  batch_size: 12\\n  # 16\\n  num_workers: 16\\n  optimizer: 'adam'\\n  adam: 0.0001\\n  adabound:\\n    initial: 0.001\\n    final: 0.05\\n  frame_num: 1024\\n\\n  summary_interval: 10\\n  validation_interval: 100\\n  checkpoint_interval: 1000\\n---\\nloss:\\n  type: 'wSDR'\\n---\\nscheduler: # Plateau, oneCycle, None\\n  type: 'Plateau'\\n  oneCycle:\\n    max_lr: 0.0001\\n  Plateau:\\n    mode: 'min'\\n    patience: 2\\n    factor: 0.5\\n    min_lr: 0.000005\\n---\\naudio:\\n  frame : 1024\\n  shift : 256\\n  samplerate : 16000\\n---\\ndata:\\n  root: '/home/data/3-channel-dnn/'\\n---\\n  log:\\n    root: '/home/nas/user/kbh/3-channel-dnn/'\\n\""
       ]
      },
-     "execution_count": 20,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,16 +137,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = DatasetDCUNET(hp.data.root+'/STFT_R',hp.data.root+'/WAV',['dt05_bus_simu'],'*.npy',num_frame=hp.model.DCUNET.num_frame)"
+    "data = DatasetDCUNET(hp.data.root+'/STFT_R',hp.data.root+'/WAV',['tr05_bus_simu','tr05_caf_simu','tr05_ped_simu','tr05_str_simu'],'*.npy',num_frame=hp.model.DCUNET.num_frame)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -155,14 +155,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "75\n",
+      "20032\n",
+      "20032\n",
+      "-5\n",
+      "21312\n",
+      "clean\n",
+      "tr05_bus_simu/20A_20AC010G_BUS\n",
+      "1568\n",
+      "noisy\n",
+      "tr05_bus_simu/20A_20AC010G_BUS\n",
+      "1568\n",
       "torch.Size([3, 513, 80, 2])\n",
-      "torch.Size([20480])\n",
-      "torch.Size([20480])\n"
+      "torch.Size([21312])\n",
+      "torch.Size([21312])\n"
      ]
     }
    ],
    "source": [
-    "x= data[0]\n",
+    "x= data.__getitem__(1568)\n",
     "print(x['input'].shape)\n",
     "print(x['clean'].shape)\n",
     "print(x['noisy'].shape)"
@@ -170,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,34 +210,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([1, 3, 513, 80, 2])\n",
-      "x0 torch.Size([1, 31, 513, 80, 2])\n",
-      "x1 torch.Size([1, 31, 513, 80, 2])\n",
-      "x2 torch.Size([1, 62, 257, 40, 2])\n",
-      "x3 torch.Size([1, 62, 129, 40, 2])\n",
-      "x4 torch.Size([1, 62, 65, 20, 2])\n",
-      "x5 torch.Size([1, 62, 33, 20, 2])\n",
-      "x6 torch.Size([1, 62, 17, 10, 2])\n",
-      "x7 torch.Size([1, 62, 9, 10, 2])\n",
-      "x8 torch.Size([1, 62, 5, 5, 2])\n",
-      "x9 torch.Size([1, 128, 3, 5, 2])\n",
-      "encoded  torch.Size([1, 128, 3, 5, 2])\n",
-      "p0, torch.Size([1, 62, 5, 5, 2]) + x9, torch.Size([1, 62, 5, 5, 2]), padding (2, 1)\n",
-      "p1, torch.Size([1, 62, 9, 10, 2]) + x8, torch.Size([1, 62, 9, 10, 2]), padding (2, 1)\n",
-      "p2, torch.Size([1, 62, 17, 10, 2]) + x7, torch.Size([1, 62, 17, 10, 2]), padding (2, 1)\n",
-      "p3, torch.Size([1, 62, 33, 20, 2]) + x6, torch.Size([1, 62, 33, 20, 2]), padding (2, 1)\n",
-      "p4, torch.Size([1, 62, 65, 20, 2]) + x5, torch.Size([1, 62, 65, 20, 2]), padding (2, 1)\n",
-      "p5, torch.Size([1, 62, 129, 40, 2]) + x4, torch.Size([1, 62, 129, 40, 2]), padding (2, 1)\n",
-      "p6, torch.Size([1, 62, 257, 40, 2]) + x3, torch.Size([1, 62, 257, 40, 2]), padding (3, 2)\n",
-      "p7, torch.Size([1, 62, 513, 80, 2]) + x2, torch.Size([1, 31, 513, 80, 2]), padding (3, 2)\n",
-      "p8, torch.Size([1, 62, 513, 80, 2]) + x1, torch.Size([1, 31, 513, 80, 2]), padding (0, 3)\n"
+      "torch.Size([1, 3, 513, 80, 2])\n"
      ]
     }
    ],
