--- a/src/[prac]torch_data.ipynb
+++ b/src/[prac]torch_data.ipynb
@@ -93,7 +93,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/kiosk/anaconda3/envs/dnn/lib/python3.8/site-packages/torchaudio/backend/utils.py:53: UserWarning: \"sox\" backend is being deprecated. The default backend will be changed to \"sox_io\" backend in 0.8.0 and \"sox\" backend will be removed in 0.9.0. Please migrate to \"sox_io\" backend. Please refer to https://github.com/pytorch/audio/issues/903 for the detail.\n",
+      "/home/kbh/anaconda3/envs/dnn/lib/python3.8/site-packages/torchaudio/backend/utils.py:53: UserWarning: \"sox\" backend is being deprecated. The default backend will be changed to \"sox_io\" backend in 0.8.0 and \"sox\" backend will be removed in 0.9.0. Please migrate to \"sox_io\" backend. Please refer to https://github.com/pytorch/audio/issues/903 for the detail.\n",
       "  warnings.warn(\n"
      ]
     }
@@ -107,28 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"gpu: 'cuda:0'\\n---\\nmodel :\\n  FC :\\n    len : 3\\n  DCUNET : \\n    num_frame : 80\\n---\\ntrain:\\n  epoch: 50\\n  # 12\\n  batch_size: 12\\n  # 16\\n  num_workers: 16\\n  optimizer: 'adam'\\n  adam: 0.0001\\n  adabound:\\n    initial: 0.001\\n    final: 0.05\\n  frame_num: 1024\\n\\n  summary_interval: 10\\n  validation_interval: 100\\n  checkpoint_interval: 1000\\n---\\nloss:\\n  type: 'wSDR'\\n---\\nscheduler: # Plateau, oneCycle, None\\n  type: 'Plateau'\\n  oneCycle:\\n    max_lr: 0.0001\\n  Plateau:\\n    mode: 'min'\\n    patience: 2\\n    factor: 0.5\\n    min_lr: 0.000005\\n---\\naudio:\\n  frame : 1024\\n  shift : 256\\n  samplerate : 16000\\n---\\ndata:\\n  root: '/home/data/3-channel-dnn/'\\n---\\n  log:\\n    root: '/home/nas/user/kbh/3-channel-dnn/'\\n\""
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "f = open('../config/default.yaml')\n",
-    "f.read()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,16 +116,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = DatasetDCUNET(hp.data.root+'/STFT_R',hp.data.root+'/WAV',['tr05_bus_simu','tr05_caf_simu','tr05_ped_simu','tr05_str_simu'],'*.npy',num_frame=hp.model.DCUNET.num_frame)"
+    "data = DatasetDCUNET(hp.data.root+'/STFT_R',hp.data.root+'/WAV',['dt05_bus_simu'],'*.npy',num_frame=hp.model.DCUNET.num_frame)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {
     "scrolled": false
    },
@@ -155,25 +134,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "75\n",
-      "20032\n",
-      "20032\n",
-      "-5\n",
-      "21312\n",
-      "clean\n",
-      "tr05_bus_simu/20A_20AC010G_BUS\n",
-      "1568\n",
-      "noisy\n",
-      "tr05_bus_simu/20A_20AC010G_BUS\n",
-      "1568\n",
       "torch.Size([3, 513, 80, 2])\n",
-      "torch.Size([21312])\n",
-      "torch.Size([21312])\n"
+      "torch.Size([20480])\n",
+      "torch.Size([20480])\n"
      ]
     }
    ],
    "source": [
-    "x= data.__getitem__(1568)\n",
+    "x= data[0]\n",
     "print(x['input'].shape)\n",
     "print(x['clean'].shape)\n",
     "print(x['noisy'].shape)"
@@ -181,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,14 +178,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([1, 3, 513, 80, 2])\n"
+      "torch.Size([1, 3, 513, 80, 2])\n",
+      "x0 torch.Size([1, 31, 513, 80, 2])\n",
+      "x1 torch.Size([1, 31, 513, 80, 2])\n",
+      "x2 torch.Size([1, 62, 257, 40, 2])\n",
+      "x3 torch.Size([1, 62, 129, 40, 2])\n",
+      "x4 torch.Size([1, 62, 65, 20, 2])\n",
+      "x5 torch.Size([1, 62, 33, 20, 2])\n",
+      "x6 torch.Size([1, 62, 17, 10, 2])\n",
+      "x7 torch.Size([1, 62, 9, 10, 2])\n",
+      "x8 torch.Size([1, 62, 5, 5, 2])\n",
+      "x9 torch.Size([1, 128, 3, 5, 2])\n",
+      "encoded  torch.Size([1, 128, 3, 5, 2])\n",
+      "p0, torch.Size([1, 62, 5, 5, 2]) + x9, torch.Size([1, 62, 5, 5, 2]), padding (2, 1)\n",
+      "p1, torch.Size([1, 62, 9, 10, 2]) + x8, torch.Size([1, 62, 9, 10, 2]), padding (2, 1)\n",
+      "p2, torch.Size([1, 62, 17, 10, 2]) + x7, torch.Size([1, 62, 17, 10, 2]), padding (2, 1)\n",
+      "p3, torch.Size([1, 62, 33, 20, 2]) + x6, torch.Size([1, 62, 33, 20, 2]), padding (2, 1)\n",
+      "p4, torch.Size([1, 62, 65, 20, 2]) + x5, torch.Size([1, 62, 65, 20, 2]), padding (2, 1)\n",
+      "p5, torch.Size([1, 62, 129, 40, 2]) + x4, torch.Size([1, 62, 129, 40, 2]), padding (2, 1)\n",
+      "p6, torch.Size([1, 62, 257, 40, 2]) + x3, torch.Size([1, 62, 257, 40, 2]), padding (3, 2)\n",
+      "p7, torch.Size([1, 62, 513, 80, 2]) + x2, torch.Size([1, 31, 513, 80, 2]), padding (3, 2)\n",
+      "p8, torch.Size([1, 62, 513, 80, 2]) + x1, torch.Size([1, 31, 513, 80, 2]), padding (0, 3)\n"
      ]
     }
    ],
@@ -230,7 +218,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# DatasetFC : How?"
+    "# DatasetFC"
    ]
   },
   {
@@ -238,17 +226,21 @@
    "metadata": {},
    "source": [
     "+ Magnitude only ? \n",
-    "+ Respectively ? "
+    "+ Respectively ?     \n",
+    "FC => flat  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dataset import DatasetFC\n",
-    "import torch.nn as nn"
+    "from dataset.FC import DatasetFC\n",
+    "import torch.nn as nn\n",
+    "from utils.hparams import HParam\n",
+    "import torch\n",
+    "from model.FC import ModelFC"
    ]
   },
   {
@@ -257,21 +249,57 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "d = DatasetFC('/home/data/kbh/3-channel-dnn/STFT_R/','dt05_bus_simu','*.npy')\n",
-    "a = d[0]"
+    "hp = HParam('../config/dnn2_t1.yaml')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "data = DatasetFC(hp.data.root+'/STFT_R',['dt05_bus_simu'],'*.npy')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ModelFC[input_size] : 10773\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = ModelFC(hp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": true
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([3, 513, 7, 2])"
+       "torch.Size([10773, 2])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([513, 2])"
       ]
      },
      "metadata": {},
@@ -279,7 +307,69 @@
     }
    ],
    "source": [
-    "display(a['input'].shape)"
+    "x = data[0]\n",
+    "display(x['input'].shape)\n",
+    "display(x['target'].shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 10773, 2])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 10773])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 10773])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "t = torch.unsqueeze(x['input'],0)\n",
+    "display(t.shape)\n",
+    "y = model(t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 513, 2])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(y.shape)"
    ]
   },
   {
