--- a/src/test_torch_data.ipynb
+++ b/src/test_torch_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,6 +81,133 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# stack"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.4558],\n",
+      "        [0.7885],\n",
+      "        [0.5707]])\n",
+      "tensor([[0.4299],\n",
+      "        [0.2746],\n",
+      "        [0.0755]])\n",
+      "torch.Size([3, 1, 2])\n",
+      "tensor([[[0.4558, 0.4299]],\n",
+      "\n",
+      "        [[0.7885, 0.2746]],\n",
+      "\n",
+      "        [[0.5707, 0.0755]]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "r = torch.rand(3,1)\n",
+    "i = torch.rand(3,1)\n",
+    "print(r)\n",
+    "print(i)\n",
+    "y = torch.stack([r,i],-1)\n",
+    "print(y.shape)\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Reshape [B,C,F,T] -> [B,T,F*C]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([2, 3, 4, 5])\n",
+      "tensor([[[[0.6110, 0.8286, 0.3255, 0.1490, 0.4538],\n",
+      "          [0.4805, 0.4417, 0.8829, 0.2148, 0.0257],\n",
+      "          [0.5246, 0.6687, 0.5311, 0.0602, 0.5969],\n",
+      "          [0.8480, 0.4930, 0.4059, 0.2005, 0.4084]],\n",
+      "\n",
+      "         [[0.4185, 0.8744, 0.6209, 0.8529, 0.6595],\n",
+      "          [0.4300, 0.9398, 0.7861, 0.4252, 0.2797],\n",
+      "          [0.6086, 0.0241, 0.5443, 0.0700, 0.8692],\n",
+      "          [0.8467, 0.4646, 0.3098, 0.3242, 0.5100]],\n",
+      "\n",
+      "         [[0.0115, 0.0820, 0.9776, 0.1290, 0.2098],\n",
+      "          [0.5951, 0.0589, 0.0427, 0.5044, 0.2110],\n",
+      "          [0.8659, 0.9476, 0.2193, 0.6886, 0.6618],\n",
+      "          [0.2234, 0.2734, 0.6903, 0.8710, 0.6563]]],\n",
+      "\n",
+      "\n",
+      "        [[[0.1061, 0.9955, 0.5710, 0.5230, 0.9818],\n",
+      "          [0.5171, 0.0823, 0.1672, 0.6300, 0.1782],\n",
+      "          [0.5363, 0.8298, 0.6234, 0.7156, 0.6168],\n",
+      "          [0.8795, 0.5389, 0.4069, 0.0766, 0.6461]],\n",
+      "\n",
+      "         [[0.6127, 0.7275, 0.7547, 0.8454, 0.9408],\n",
+      "          [0.6418, 0.7803, 0.2087, 0.2863, 0.9840],\n",
+      "          [0.6079, 0.7119, 0.6680, 0.6675, 0.0923],\n",
+      "          [0.9094, 0.1636, 0.9145, 0.0241, 0.8257]],\n",
+      "\n",
+      "         [[0.7491, 0.2154, 0.1477, 0.5134, 0.2843],\n",
+      "          [0.1153, 0.1604, 0.1256, 0.9583, 0.0500],\n",
+      "          [0.7752, 0.4458, 0.3242, 0.0060, 0.6570],\n",
+      "          [0.5974, 0.7786, 0.5121, 0.8236, 0.1811]]]])\n",
+      "torch.Size([2, 5, 12])\n",
+      "tensor([[[0.6110, 0.4805, 0.5246, 0.8480, 0.4185, 0.4300, 0.6086, 0.8467,\n",
+      "          0.0115, 0.5951, 0.8659, 0.2234],\n",
+      "         [0.8286, 0.4417, 0.6687, 0.4930, 0.8744, 0.9398, 0.0241, 0.4646,\n",
+      "          0.0820, 0.0589, 0.9476, 0.2734],\n",
+      "         [0.3255, 0.8829, 0.5311, 0.4059, 0.6209, 0.7861, 0.5443, 0.3098,\n",
+      "          0.9776, 0.0427, 0.2193, 0.6903],\n",
+      "         [0.1490, 0.2148, 0.0602, 0.2005, 0.8529, 0.4252, 0.0700, 0.3242,\n",
+      "          0.1290, 0.5044, 0.6886, 0.8710],\n",
+      "         [0.4538, 0.0257, 0.5969, 0.4084, 0.6595, 0.2797, 0.8692, 0.5100,\n",
+      "          0.2098, 0.2110, 0.6618, 0.6563]],\n",
+      "\n",
+      "        [[0.1061, 0.5171, 0.5363, 0.8795, 0.6127, 0.6418, 0.6079, 0.9094,\n",
+      "          0.7491, 0.1153, 0.7752, 0.5974],\n",
+      "         [0.9955, 0.0823, 0.8298, 0.5389, 0.7275, 0.7803, 0.7119, 0.1636,\n",
+      "          0.2154, 0.1604, 0.4458, 0.7786],\n",
+      "         [0.5710, 0.1672, 0.6234, 0.4069, 0.7547, 0.2087, 0.6680, 0.9145,\n",
+      "          0.1477, 0.1256, 0.3242, 0.5121],\n",
+      "         [0.5230, 0.6300, 0.7156, 0.0766, 0.8454, 0.2863, 0.6675, 0.0241,\n",
+      "          0.5134, 0.9583, 0.0060, 0.8236],\n",
+      "         [0.9818, 0.1782, 0.6168, 0.6461, 0.9408, 0.9840, 0.0923, 0.8257,\n",
+      "          0.2843, 0.0500, 0.6570, 0.1811]]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "B = 2\n",
+    "C = 3\n",
+    "F = 4\n",
+    "T = 5\n",
+    "x = torch.rand((B,C,F,T))\n",
+    "print(x.shape)\n",
+    "print(x)\n",
+    "z = torch.reshape(x,(B,C*F,T))\n",
+    "z = z.permute((0,2,1))\n",
+    "print(z.shape)\n",
+    "print(z)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# DatasetDCUNET"
    ]
   },
@@ -126,9 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -255,9 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "data = DatasetFC(hp.data.root+'/STFT_R',['dt05_bus_simu'],'*.npy')"
@@ -315,9 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
