--- a/src/model/test_UNET.ipynb
+++ b/src/model/test_UNET.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "b62120b6-6af6-48a1-9322-95e026e9681e",
+   "metadata": {},
+   "source": [
+    "## vbelz"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "fbc98831-ddf2-4b1b-a4af-203499e15e96",
@@ -95,9 +103,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ccb74ef2-d518-4ebb-bb6c-1295b0124573",
+   "metadata": {},
+   "source": [
+    "## UNET20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "ab183405-a127-48ad-a354-739939c67857",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from Unet20 import Unet20\n",
+    "import torch"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab183405-a127-48ad-a354-739939c67857",
+   "id": "9a96f42f-f138-42d0-8efa-cf486697a12f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0de38f4c-2c8d-455b-a90e-96484198287b",
    "metadata": {},
    "outputs": [],
    "source": []
